--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
       "supportsTablet": true,
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyCHHTTkH9oJY9hrtMGSaouZNCHCDNaeYvM"
+          "apiKey": ""
         }
       },
       "bundleIdentifier": "com.shiraz996.expopasban"
@@ -31,7 +31,7 @@
       },
       "config": {
         "googleMaps": {
-          "apiKey": "AIzaSyCHHTTkH9oJY9hrtMGSaouZNCHCDNaeYvM"
+          "apiKey": ""
         }
       },
       "package": "com.shiraz996.expopasban"
